// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination matches the desktop snapshot 1`] = `
.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <div
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </div>
    <ol
      class="c5"
    />
  </nav>
</div>
`;

exports[`Pagination matches the desktop snapshot with multiples digits page numbers 1`] = `
.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <div
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </div>
    <ol
      class="c5"
    />
  </nav>
</div>
`;

exports[`Pagination matches the mobile snapshot 1`] = `
.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <div
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </div>
    <ol
      class="c5"
    />
  </nav>
</div>
`;

exports[`Pagination matches the mobile snapshot with multiples digits page numbers 1`] = `
.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <div
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </div>
    <ol
      class="c5"
    />
  </nav>
</div>
`;
